# gyre-lc

./: .gitignore  README.md  README.rst  atm_coeffs.py  bin_params.in  circle.ipynb  create_grid.py  delta_coeffs.py  grid.py  gyre-lc.py  iOri-lightcurve.ipynb  irrad_class.py  main.py  main_func.py  obs_func.py  obs_main.py  orbit_func.py  pg-demo-kepler.h5  resp_coeffs.py  resp_delta.py  setup.cfg  star_class.py  star_func.py  test_grid.py
.ipynb_checkpoints/: iOri-lightcurve-checkpoint.ipynb  prototyping-checkpoint.ipynb
atmosphere-grids/: I_from_func.py  color-partials.py  grid.py  grid_notebook.ipynb  make_grid.py  node.py
docs/: .readthedocs.yaml  requirements.txt
docs/source/: .refs.bib.swp  ads_refs.tsv  conf.py  index.rst  macros.def  refs.bib
docs/source/ref-guide/: .inputs.rst.swp  (+7 more)
grid/: kepler.h5  pg-demo-brite-b.h5
gyre-lc/: atm_coeffs.py  bin_func.py  bin_params.in  gyre-lc.py  iOri-lightcurve.ipynb  irrad_func.py  obs_func.py  orbit_func.py  resp_delta.py  star_func.py  test_gyre-lc.py
gyre-lc/data/: new-response.001.h5  response.001.h5  response.Ab.h5
gyrelc/: binary_class.py  gyrelc.py  resp_coeffs.py  star_class.py
gyrelc/Star/: Star.py
lc-data/: partials.in
lib/: '=  .#star_class.py  atm_coeffs.py  binary_class.py  gyrelc.py  irrad_class.py  star_class.py
model/: .binary_params.in.swp  binary_params.in  iOri-Aa-response.h5  iOri-Aa.mesa  iOri-Ab-response.h5  iOri-Ab.mesa  t29173g423.h5  t30890g364.h5
passbands/: brite-r.h5
src/: resp_coeffs.py  star_class.py
src/gyrelc/: __init__.py  binary.py  observer.py  star.py
(+22 files in other folders)
