[metadata]
name = aesthetic_ascii
version = 0.0.1
author = Aaron Lopez
author_email = aaronlopez.2220@gmail.com
description = For synthesizing light curves of binary systems with TEOs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaronesque/gyre-lc
classifiers =
    Development Status:: 2 - Pre-Alpha

[options]
package_dir =
    =  src
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src
